# geoscenarioserver

./: .gitignore  .gitignore.swp  .gitmodules  Actor.py  CONTRIBUTORS  EvaluationServer.py  GSAppDir.py  GSCheeckerApp.py  GSEvaluation.py  GSEvaluationServer.py  GSOptProblem.py  GSServer.py  LICENSE  MANIFEST.in  README.md  Report.py  ScenarioSetup.py  SimConfig.py  SimConfigRelease.py  SimTraffic.py  Simulator.py  TickSync.py  TrafficLight.py  TrajectoryEvaluationServer.py  Utils.py  WSL2-README.md  conda-environment.yml  impatientdriver.btree  nsga2.py  pixi.toml  plot_trajectories.py  pyproject.toml  requirements.txt  simulationmsg.proto  simulationmsg_pb2.py  test1.txt  test_btreeparser.py
.devcontainer/: Dockerfile  devcontainer.json  install_dependencies.bash
.github/: copilot-instructions.md
Mapping/: LaneletMap.py
btrees/: README.md  eval_main.btree
clients/ros2_client/geoscenario_client/: package.xml  setup.cfg  setup.py
clients/ros2_client/geoscenario_client/geoscenario_client/: SimSharedMemoryClient.py  geoscenario_client.py  mock_co_simulator.py
clients/ros2_client/geoscenario_msgs/: CMakeLists.txt  package.xml
clients/ros2_client/geoscenario_msgs/msg/: Pedestrian.msg  Tick.msg  Vehicle.msg
core/: ScenarioSetup.py  SimTraffic.py  TickSync.py
dash/: DashBoard.py  Dashboard.py  Dashboard2.py  DashboardBase.py  DashboardSharedMemory.py
dataset_api/: DR_CHN_Merging_ZS0_CASE_10_START_TIME_1900.osm  DR_CHN_Merging_ZS0_CASE_400_START_TIME_100.osm  DR_CHN_Merging_ZS0_CASE_50_START_TIME_700.osm  DR_DEU_Merging_MT_CASE_10_START_TIME_100.osm  DR_DEU_Merging_MT_CASE_70_START_TIME_100.osm  DR_DEU_Merging_MT_CASE_70_START_TIME_100.save.osm  DR_DEU_Merging_MT_CASE_70_START_TIME_1002sdv_and_tv.osm  DR_DEU_Merging_MT_CASE_70_START_TIME_1003sdv_and_tv.osm  DR_DEU_Merging_MT_CASE_70_START_TIME_1004sdv_and_tv.osm  DR_DEU_Merging_MT_CASE_70_START_TIME_100_INJECTION.osm  DR_DEU_Merging_MT_CASE_70_START_TIME_100all_sdv.osm  DR_DEU_Merging_MT_CASE_70_START_TIME_100all_tv.osm  DR_DEU_Merging_MT_CASE_70_START_TIME_1900.osm  GSWriter.ipynb  InteractionDataset.ipynb  InteractionDataset.py  InteractionDatasetLuke.py  TrajectoryPlotter.ipynb  constants.py  gsw_tester.osm  lanelet.ipynb  lanelet_occuppancy_tutorial.ipynb  map_vis_lanelet2.py  test.osm
eval/: EvaluationSim.py  TrajectoryEvaluation.py  scenarios_from_db.csv  scenarios_from_db.xlsx
evaluation/: Evaluation.py  TrajectoryEvaluation.py  pedestrian_scenarios.csv  scenarios.csv
geoscenarioserver/: Actor.py  GSServer.py  GSServerBase.py  Pedestrian.py  ScenarioSetup.py  SimConfig.py  SimTraffic.py  TickSync.py  Vehicle.py
gsc/: GSChecker.py  GSParser.py  Report.py  Utils.py
gsw/: GSWriter.ipynb  GSWriter.py
josm/: geoscenario2_presets.xml  geoscenario2_style.css  geoscenario_schema_v11.xsd
lanelet2_standalone/: CMakeLists.txt  README.md  README.md.origin  setup.py
lanelet2_standalone/cmake/: FindPugiXML.cmake
lanelet2_standalone/lanelet2.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
lanelet2_standalone/lanelet2_examples/scripts/: tutorial.py
lanelet2_standalone/lanelet2_python/python_api/: core.cpp  geometry.cpp  routing.cpp
lanelet2_standalone/lanelet2_routing/src/: RoutingGraphBuilder.cpp
lanelet2_standalone/pylanelet2/lanelet2/: __init__.py  core.py  geometry.py  io.py  projection.py  routing.py  traffic_rules.py
mapping/: LaneletMap.py  LaneletTools.py  ll_columbia_university.osm
mm/: Constants.py  CostFunctions.py  DashBoard.py  LaneletMap.py  LaneletTest.py  ManeuverConfig.py  ManeuverModels.py  Metrics.py  Plots.py  RunApp.sh  SV.py  SVPlanner.py  SimTraffic.py  SimVehicleController.py  Simulator.py  TestTickSync.py  TickSync.py  Utils.py  Vehicle.py  VehicleState.py
perception/: DynamicObjectTracker.py  Perception.py
requirements/: ExplicitRequirements.py  HardRequirements.py  ImplicitRequirements.py  RequirementEvents.py  RequirementEventsParser.py  RequirementViolationEvents.py  RequirementsChecker.py  SoftRequirements.py
ros2/: README.md  build.sh  pixi.toml  recipe.yaml
ros2/src/geoscenario_bringup/: CMakeLists.txt  package.xml  pixi.toml  setup.cfg  setup.py
ros2/src/geoscenario_bringup/launch/: test_server.launch.py
ros2/src/geoscenario_bringup/test/: test_heartbeat_timeout.py
ros2/src/geoscenario_client/: package.xml  setup.py
ros2/src/geoscenario_client/geoscenario_client/: geoscenario_client.py  mock_co_simulator.py
ros2/src/geoscenario_msgs/: CMakeLists.txt  package.xml  pixi.toml
ros2/src/geoscenario_msgs/msg/: Tick.msg
ros2/src/geoscenario_server/: package.xml  pixi.toml  setup.cfg  setup.py
ros2/src/geoscenario_server/geoscenario_server/: geoscenario_server.py
scenario_suite/: .gitignore  README.md  maps  setup.bash
scenarios/: TC_BGR_Intersection_VA.osm_xy  example_map_scenario.osm  gs_example_map_scenario.osm  gs_samplescenario_alltags.osm  gs_straight_road_cutin_scenario.osm  gs_straight_road_pytree_drive.osm  gs_straight_road_reverse_scenario.osm  gs_straight_road_scenario.osm  gs_straight_road_scenario_2.osm  gs_straight_road_scenario_3.osm  ll2_intersection.osm  ll2_round.osm  mapping_example.osm  straight_road_scenario.osm
scripts/: build_all_conda_packages.bash  build_ros2.bash  catkin_utils.bash  conda-environment.yml  create-opt-geoscenario.bash  install_dependencies.bash  opt-geoscenarioserver-README.md  opt-geoscenarioserver-create.bash  opt-geoscenarioserver-install.bash  opt-install.bash  pixi_build_ros2_client.bash  pixi_test_ros2_client.bash  run_scenarios.bash  setup-conda-forge-env.bash  setup_conda-forge_env.bash
shared_mem/: EgoSharedMemory.py
shm/: CarlaSync.py  README.md  SimSharedMemory.py  SimSharedMemoryClient.py  SimSharedMemoryServer.py
sp/: ConditionConfig.py  ManeuverConfig.py  ManeuverModels.py  ManeuverUtils.py  Pedestrian.py  SPPlanner.py  SPPlannerState.py
sv/: BTree.py  BTreeLeaves.py  BTreeModel.py  ClienV  CostFunctions.py  DashBoard.py  FaultInjection.py  FrenetTrajectory.py  Maneuver.py  ManeuverConfig.py  ManeuverModels.py  ManeuverStatus.py  ManeuverUtils.py  SDVPlanner.py  SDVPlannerState.py  (+9 more)
(+6070 files in other folders)
