<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>geoscenario_bringup</name>
  <version>0.1.0</version>
  <description>Launch files and end-to-end tests for GeoScenario</description>
  <maintainer email="sdelcore@uwaterloo.ca">Spencer Delcore</maintainer>
  <maintainer email="michal.antkiewicz@uwaterloo.ca">Michal Antkiewicz</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>geoscenario_server</exec_depend>
  <exec_depend>geoscenario_client</exec_depend>
  <exec_depend>geoscenario_msgs</exec_depend>

  <test_depend>python3-pytest</test_depend>
  <test_depend>launch_testing</test_depend>
  <test_depend>launch_testing_ament_cmake</test_depend>
  <test_depend>launch_testing_ros</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
